--- a/src/sceens/css/header.css
+++ b/src/sceens/css/header.css
@@ -1,30 +1,52 @@
 header {
-    list-style: none;
-    padding: 20px 0 20px 0;
-    text-align: center;
-    border-bottom: solid 1px black;
-    background-color: white;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  list-style: none;
+  padding: 20px 0 20px 0;
+  text-align: center;
+  border-bottom: solid 1px black;
+  background-color: white;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center; 
+  margin: auto;
+  padding: 2rem;
 }
 
 header img {
-    display: inline-block;
+  display: inline-block;
 }
 
 header nav {
-    display: inline-block;
-    margin-right: 10px;
+  display: inline-block;
+  margin-right: 10px;
+  flex-direction: row;
+  align-items: end;
+  text-align: justify;
 }
 
-@media sceen and (max-width: 100%) {
-    .bloc {
-      width:100%;
-    }
 
-    .bloc {
-      font-size: 0.9em;
+@media sceen and (min-width: 100%) {
+  .bloc {
+    width:100%;
+  }
+
+  .bloc {
+    font-size: 0.9em;
+  }
+
+}
+
+@media sceen and (min-width: 10%) {
+    .main-container {
+      color:  rgb(249, 249, 249);
+      font-size: 100%;
     }
 
   }
+  
+
+
+
+
+
+
+
